# WT-Plotter

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  Resources.qrc  SceneImageViewer.cpp  build.gradle  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerprofiledialog.cpp  playerprofiledialog.h  playerprofiledialog.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  sceneimageviewer.h  version.json  worker.cpp  worker.h
.github/workflows/: build.yml  linux_release.yaml  release.yml  windows_release.yaml
classes/: constants.cpp  constants.h  craftinfo.cpp  craftinfo.h  dbmanager.cpp  dbmanager.h  discordworker.cpp  discordworker.h  logger.cpp  logger.h  player.cpp  player.h  playerinfo.cpp  playerinfo.h  playerreplaydata.cpp  playerreplaydata.h  position.cpp  position.h  replay.cpp  replay.h  replayloaderworker.cpp  replayloaderworker.h  utils.cpp  utils.h
cmake/: ConvertImage.cmake  Deploy.cmake  Setup.cmake
discord-gamesdk-cmake/: CMakeLists.txt
resources/: wtplotter.desktop
resources/map_images/: resize.py
resources/translations/: generate_assets_translations.py  locations.json  vehicles.json  wtplotter_en.ts  wtplotter_ru.ts
src/: main.cpp  mainwindow.cpp  mainwindow.h  playerprofiledialog.h  preferencesdialog.h  sceneimageviewer.h  version.h.in  version.json  worker.cpp  worker.h  wrpl.cpp  wrpl.h
src/classes/: binaryops.cpp  binaryops.h  dbmanager.cpp  dbmanager.h  discordworker.cpp  discordworker.h  logger.cpp  player.cpp  player.h  position.cpp  replay.cpp  replay.h  structs.h  utils.cpp  utils.h
src/main/java/: module-info.java
src/main/java/org/sgambe/wtplotter/: PlayerInfoPopupController.java  PlotterController.java  PreferencesController.java  ReplayDetailsController.java  SuperMain.java  WTPlotter.java  WTPlotterController.java
src/main/java/org/sgambe/wtplotter/plotter/: HttpFetcher.java  MarkerDrawer.java  ParquetPosition.java  Position.java
src/main/java/org/sgambe/wtplotter/replaydata/: CraftInfo.java  Player.java  PlayerInfo.java  Replay.java
src/main/java/org/sgambe/wtplotter/utils/: ColorSimilarity.java  Constants.java  FileUtils.java  Utils.java
src/main/resources/: fontstyle.css  logback.xml
src/main/resources/org/sgambe/wtplotter/: MainView.fxml  PlayerInfoPopupView.fxml  PlotterView.fxml  PreferencesView.fxml  ReplayDetailsView.fxml
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  playerprofiledialog.cpp  playerprofiledialog.h  preferencesdialog.cpp
wt_ext_cli/: wt_ext_cli
